--- a/public/main.css
+++ b/public/main.css
@@ -6377,6 +6377,26 @@ input {
     height: 1350px;
   }
 }
+@media (min-width: 320px) and (max-width: 1000px) {
+  .naLa {
+    font-size: 14px !important;
+  }
+}
+@media (min-width: 321px) and (max-width: 370px) and (orientation: portrait) {
+  .wrap_full22 {
+    grid-gap: 0 54px !important;
+  }
+  .additional {
+    width: 196% !important;
+    height: 40px !important;
+    left: 5px;
+  }
+  .log {
+    width: 280% !important;
+    left: -187px !important;
+    top: 65px;
+  }
+}
 
 @media (min-width: 320px) and (max-width: 360px) and (orientation: portrait) {
   .mobile {
